--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ before_script:
 script:
     - cargo build --verbose
     - cargo test --verbose
-    - cargo clippy -- -Fclippy::all
+    - cargo clippy -- -Dclippy::all
     - cargo fmt -- --check
     - cargo doc --verbose
